tests/src/frontend/typechecking/exhaustiveness/invalid/multiple_counterexamples1.sk
base class P {
  children =
  | A()
  | B()
  | C()
}

fun test(x: P): void {
  x match {
  | A() -> void
  }
}
